--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -594,7 +594,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showAssetsAllocations('Sam 1966')"
+    "plan.showAssetDistribution('Sam 1966')"
    ]
   },
   {
