--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -652,7 +652,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showAssetsAllocations()"
+    "plan.showAssetDistribution()"
    ]
   },
   {
