--- a/mary+john.ipynb
+++ b/mary+john.ipynb
@@ -129,7 +129,7 @@
    "source": [
     "plan1.setAssetBalances(taxable=[50000, 40000], \n",
     "                      taxDeferred=[1000000, 400000],\n",
-    "                      taxFree=[80000, 40000],\n",
+    "                      taxFree=[100000, 50000],\n",
     "                      beneficiary=[1, 1])"
    ]
   },
@@ -209,7 +209,7 @@
     "tags": []
    },
    "source": [
-    "Mary and John desire an annual income of \\\\$80k."
+    "Mary and John desire a net annual income of \\\\$80k."
    ]
   },
   {
@@ -277,7 +277,7 @@
    },
    "outputs": [],
    "source": [
-    "plan1.setRates('historical', 1969)"
+    "plan1.setRates('average', 1990, 2022)"
    ]
   },
   {
@@ -295,7 +295,8 @@
    "id": "eecc3b25-ae80-4e6a-be38-1f3c66a46899",
    "metadata": {},
    "source": [
-    "#### Our first per account, per individual allocation strategy."
+    "#### Our first plan has a per-account, per-individual allocation strategy\n",
+    "We transition from a 65% stock portfolio to a 50% stock portfolio. In `plan1` all three savings accounts of each spouse follow the same allocation strategy separately. The six accounts are considered separately and each follow the desired assets allocation."
    ]
   },
   {
@@ -305,15 +306,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan1.setInitialAR(taxable=[[60, 30, 5, 5], [60, 30, 5, 5]],\n",
-    "                  taxDeferred=[[60, 30, 5, 5], [60, 30, 5, 5]],\n",
-    "                  taxFree=[[60, 30, 5, 5], [60, 30, 5, 5]])\n",
+    "myMethod = 's-curve'\n",
+    "# myMethod = 'linear'\n",
+    "plan1.setInitialAR(taxable=[[65, 25, 5, 5], [65, 25, 5, 5]],\n",
+    "                  taxDeferred=[[65, 25, 5, 5], [65, 25, 5, 5]],\n",
+    "                  taxFree=[[65, 25, 5, 5], [65, 25, 5, 5]])\n",
     "\n",
     "plan1.setFinalAR(taxable=[[50, 30, 5, 15], [50, 30, 5, 15]],\n",
     "                taxDeferred=[[50, 30, 5, 15], [50, 30, 5, 15]],\n",
     "                taxFree=[[50, 30, 5, 15], [50, 30, 5, 15]])\n",
     "\n",
-    "plan1.interpolateAR('s-curve')\n",
+    "plan1.interpolateAR(myMethod)\n",
     "plan1.showAllocations()"
    ]
   },
@@ -322,7 +325,8 @@
    "id": "40b4b3d0-438b-44f4-931c-4837e0567c2c",
    "metadata": {},
    "source": [
-    "#### Coordinating between accounts"
+    "#### Our second plan is coordinating between all savings accounts for the each spouse separately\n",
+    "Exactly the same allocation ratio, but we allow to push high-performance assets towards the tax-free and tax-deferred accounts. In `plan2` each spouse coordinate between their own accounts. The asset portfolios are considered separately for each spouse, but all accounts of a spouse are coordinated. This means the allocation ratios are applied to all saving accounts of a spouse together. The allocation ratio is true for the sum of all accounts of each spouse separately. "
    ]
   },
   {
@@ -334,10 +338,10 @@
    "source": [
     "plan2 = arp.clone(plan1)\n",
     "# For coordination taking place for each individual separately.\n",
-    "plan2.setCoordinatedAR(initial=[[60, 30, 5, 5], [60, 30, 5, 5]], final=[[50, 30, 5, 15], [50, 30, 5, 15]])\n",
+    "plan2.setCoordinatedAR(initial=[[65, 25, 5, 5], [65, 25, 5, 5]], final=[[50, 30, 5, 15], [50, 30, 5, 15]])\n",
     "\n",
     "# An interpolation must follow either call for generating the data for all the years of the simulation.\n",
-    "plan2.interpolateAR('linear')\n",
+    "plan2.interpolateAR(myMethod)\n",
     "plan2.showAllocations()"
    ]
   },
@@ -346,8 +350,8 @@
    "id": "d7bb31b3-efb5-46b7-a2d4-a008109bde8e",
    "metadata": {},
    "source": [
-    "#### Coordinating between accounts and spouses\n",
-    "For a single individual, `plan2` and `plan3` would lead to the same answer."
+    "#### Third plan has full coordination between all savings accounts of both spouses\n",
+    "For a single individual, `plan2` and `plan3` would lead to the same answer. But for spouses, it can be beneficial to have one spouse with a larger tax-free account to hold all higher-performance assets. In `plan3` allocation ratios are true for the sum of all saving accounts of both spouses. "
    ]
   },
   {
@@ -360,10 +364,10 @@
     "plan3 = arp.clone(plan1)\n",
     "\n",
     "# For coordinating both spousal accounts simultaneously.\n",
-    "plan3.setCoordinatedAR(initial=[60, 30, 5, 5], final=[50, 30, 5, 15])\n",
+    "plan3.setCoordinatedAR(initial=[65, 25, 5, 5], final=[50, 30, 5, 15])\n",
     "\n",
     "# An interpolation must follow either call for generating the data for all the years of the simulation.\n",
-    "plan3.interpolateAR('s-curve')\n",
+    "plan3.interpolateAR(myMethod)\n",
     "plan3.showAllocations()"
    ]
   },
@@ -402,7 +406,8 @@
    "id": "0bfe0dbd",
    "metadata": {},
    "source": [
-    "### Show some of the relevant info over the years"
+    "### Compare some of the relevant info over the years\n",
+    "We use a dictionary to attach a string to each plan and be able to label the graphs for more clarity."
    ]
   },
   {
@@ -412,14 +417,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for plan in [plan1, plan2, plan3]:\n",
-    "    plan.showNetIncome();\n",
+    "dic = {plan1: 'plan1', plan2: 'plan2', plan3: 'plan3'}\n",
+    "for plan in dic:\n",
+    "    plan.showNetIncome(dic[plan]);\n",
     "\n",
-    "for plan in [plan1, plan2, plan3]:\n",
-    "    plan.showSources();\n",
+    "for plan in dic:\n",
+    "    plan.showSources(dic[plan]);\n",
     "\n",
-    "for plan in [plan1, plan2, plan3]:\n",
-    "    plan.showAccounts();\n"
+    "for plan in dic:\n",
+    "    plan.showAccounts(dic[plan]);\n"
    ]
   },
   {
@@ -429,11 +435,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for plan in [plan1, plan2, plan3]:\n",
-    "    plan.showGrossIncome();\n",
+    "for plan in dic:\n",
+    "    plan.showGrossIncome(dic[plan]);\n",
     "\n",
-    "for plan in [plan1, plan2, plan3]:\n",
-    "    plan.showTaxes();\n",
+    "for plan in dic:\n",
+    "    plan.showTaxes(dic[plan]);\n",
     "  "
    ]
   },
@@ -444,9 +450,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for plan in [plan1, plan2, plan3]:\n",
-    "    plan.estate(35)\n",
-    "    plan.showAssetsAllocations()\n",
+    "for plan in dic:\n",
+    "    plan.estate(25)\n",
+    "    plan.showAssetDistribution(dic[plan])\n",
     "  "
    ]
   },
@@ -455,8 +461,8 @@
    "id": "d649f68a-fdbf-4f46-94e5-2953ae17cf22",
    "metadata": {},
    "source": [
-    "### Asset allocation coordination strategy is able to generate about 10% more in assets at the end of their life!\n",
-    "And this is done while maintaining the same overall percentage of assets allocations. This benefit is overlooked when one strictly looks at tax benefits of a Roth conversion. The reality is more complex and involves RMD's, tax that the heirs pay on the tax-deferred portion of the final assets, and the greater performance achieved in tax-free accounts. "
+    "### In some cases, an asset allocation coordination strategy is able to generate about 4% more in assets left in estate!\n",
+    "And this is done while maintaining the same overall percentage of assets allocations. This benefit is overlooked. The reality is subtle and complex and involves RMD's, tax that the heirs pay on the tax-deferred portion of the final assets, and the greater performance achieved in tax-free accounts. "
    ]
   }
  ],
