--- a/template.ipynb
+++ b/template.ipynb
@@ -638,7 +638,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showAssetsAllocations()"
+    "plan.showAssetDistribution()"
    ]
   },
   {
