--- a/mary+john.ipynb
+++ b/mary+john.ipynb
@@ -296,7 +296,7 @@
    "metadata": {},
    "source": [
     "#### Our first plan has a per-account, per-individual allocation strategy\n",
-    "We transition from a 65% stock portfolio to a 50% stock portfolio. In `plan1` all three savings accounts of each spouse follow the same allocation strategy separately. The six accounts are considered separately and each follow the desired assets allocation."
+    "We transition from a 65% stock portfolio to a 50% stock portfolio. In `plan1` all three savings accounts of each spouse follow the same allocation strategy separately. The six accounts are considered separately and each follow the desired assets allocation. We have two choices for interpolating between the initial value (now) and the final value (end of life). A straight line (*linear*), or an *s-curve* transitioning through a mid-point in about 15 years. We will use variable `myMethod` to ensure all interpolation use the same method. We use the `showAllocation()` method to display to desired allocation. Later, we will use the `showAssetDistribution()` to graph the distribution of investment amounts across the different classes of assets."
    ]
   },
   {
@@ -461,8 +461,8 @@
    "id": "d649f68a-fdbf-4f46-94e5-2953ae17cf22",
    "metadata": {},
    "source": [
-    "### In some cases, an asset allocation coordination strategy is able to generate about 4% more in assets left in estate!\n",
-    "And this is done while maintaining the same overall percentage of assets allocations. This benefit is overlooked. The reality is subtle and complex and involves RMD's, tax that the heirs pay on the tax-deferred portion of the final assets, and the greater performance achieved in tax-free accounts. "
+    "### In some cases, an asset allocation coordination strategy is able to generate about 4% more value in assets left in estate!\n",
+    "And this is done while maintaining the same overall percentage of assets allocations. This benefit is often overlooked. The reality is subtle and complex and involves RMD's, tax that the heirs pay on the tax-deferred portion of the final assets, and the greater performance achieved in tax-free accounts. Obviously, this benefit will depend on the tax rate to be applied on the tax-deferred portion of the estate."
    ]
   }
  ],
