Updated numbers for 2023.

--- a/mary+john.ipynb
+++ b/mary+john.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan1 = arp.Plan(YOB=[1961, 1964], expectancy=[85, 88])"
+    "plan1 = arp.Plan(YOB=[1962, 1965], expectancy=[85, 88])"
    ]
   },
   {
@@ -277,7 +277,7 @@
    },
    "outputs": [],
    "source": [
-    "plan1.setRates('average', 1990, 2022)"
+    "plan1.setRates('historical', 1969)"
    ]
   },
   {
