Added showAllocations() to example

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -272,7 +272,8 @@
     "                taxDeferred=[[30, 50, 10, 10], [60, 40, 0, 0]],\n",
     "                taxFree=[[30, 50, 10, 10], [60, 40, 0, 0]])\n",
     "\n",
-    "plan.interpolateAR('linear')"
+    "plan.interpolateAR('linear')\n",
+    "plan.showAllocations()"
    ]
   },
   {
