Changed order of commands.

--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -49,7 +49,7 @@
    "id": "c2939c06-b407-48fb-91d7-560cd96d5206",
    "metadata": {},
    "source": [
-    "This notebook describes the case of Sam, a fictitious individual used for demonstrating the conditions required for the so-called 4% rule. This case considers no pension, no social security benefits, just a portfolio of a tax-deferred account with 50% stocks and 50% bounds. This scenario is then tested to survive sequences of historical rates, particularly the ones which happened in 1966.\n",
+    "This notebook describes the case of Sam, a fictitious individual used for demonstrating the conditions required for the so-called 4% rule. This case considers no pension, no social security benefits, just a portfolio of a tax-deferred account with 50% stocks and 50% bounds. This scenario is then tested to survive sequences of historical rates, particularly the one which happened in 1966.\n",
     "\n",
     "The article that popularized the 4% rule is from William Bengen (Journal of Financial Planning, October 1994). The scenario consists of looking at the longevity of a 50% common stocks and 50% intermediate-term Treasury notes portfolio under a variety of withdrawal rates and depending on the historical year that the individual started her retirement. Cases considered consisted of withdrawal rates from 1% to 6%, to be determined on the balance of a single tax-deferred account at the first year of retirement and then be indexed for inflation. These scenarios highlight the effect of sequence of returns through using historical data.\n",
     "\n",
@@ -170,6 +170,57 @@
   },
   {
    "cell_type": "markdown",
+   "id": "429aafe1-3661-4708-b56c-c256c025c9ab",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## There must be a plan for savings\n",
+    "The most manageable part of retirement planning is the control one has over work income, contributions to savings accounts, Roth conversions, and other big spending items in the near- and mid-term future.\n",
+    "In order to execute a realization, one must provide an earning, saving, and Roth conversion plan. This is done through providing an Excel workbook with one spreadsheet (tab) per spouse with the following information:\n",
+    "\n",
+    "|year|anticipated income|ctrb taxable | ctrb 401k | ctrb Roth 401k | ctrb IRA | ctrb Roth IRA | Roth X | big ticket items|\n",
+    "|--|--|--|--|--|--|--|--|--|\n",
+    "|2024 | | | | | | | | |\n",
+    "|2025 | | | | | | | | |\n",
+    "| ... | | | | | | | | |\n",
+    "|20XX | | | | | | | | |\n",
+    "\n",
+    "Here, 20XX is the last row that is the first year after the last spouse has passed based on the life expectancy values provided. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employment or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
+    "\n",
+    "For the purpose of this exercise, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. This transition can be gradual or sudden. Therefore there is no need to enter a retirement age for the sole purpose of quantifying your financial future.\n",
+    "\n",
+    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. As this file is in Excel, one can use the native calculator to enter a percentage of the anticipated income for contributions as this can sometimes be easier.\n",
+    "\n",
+    "Roth conversion are specified in the column marked *Roth X*. Roth conversion are typically performed in the years when the income is lower (and therefore lower tax rates), typically in the bridge years between having a full-time regular salary and collecting social security.\n",
+    "\n",
+    "Finally, *big ticket items* are used for accounting for the sale or purchase of a house, or any other major expense or money that you would give or receive (e.g., inheritance, or large gifts to or from you). Therefore, the sign (+/-) of entries in this column is important. All other column entries should be positive.\n",
+    "\n",
+    "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting the plan. In fact, ARP Lab extracts the names of these tabs to determine the individuals' names. Therefore, you need to rename these tabs to reflect your personal names if you want to accurately represent your case.\n",
+    "\n",
+    "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d23a5ef3-3253-4415-812e-c4e181ec9dd0",
+   "metadata": {},
+   "source": [
+    "Sam has no additional income and does not make any additional contributions. We will use the template file which is empty but has the first tab named *Sam*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7748bcf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plan.readContributions('template.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ea1d7ff",
    "metadata": {
     "tags": []
@@ -247,55 +298,6 @@
    "source": [
     "plan.setPension([0], [65])\n",
     "plan.setSocialSecurity([0], [65])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4ef3e5a4",
-   "metadata": {},
-   "source": [
-    "## There must be a plan for savings\n",
-    "The most manageable part of retirement planning is the control one has over work income, contributions to savings accounts, Roth conversions, and other big spending items in the near- and mid-term future.\n",
-    "In order to execute a realization, one must provide an earning, saving, and Roth conversion plan. This is done through providing an Excel workbook with one spreadsheet (tab) per spouse with the following information:\n",
-    "\n",
-    "|year|anticipated income|ctrb taxable | ctrb 401k | ctrb Roth 401k | ctrb IRA | ctrb Roth IRA | Roth X | big ticket items|\n",
-    "|--|--|--|--|--|--|--|--|--|\n",
-    "|2024 | | | | | | | | |\n",
-    "|2025 | | | | | | | | |\n",
-    "| ... | | | | | | | | |\n",
-    "|20XX | | | | | | | | |\n",
-    "\n",
-    "Here, 20XX is the last row that is the first year after the last spouse has passed based on the life expectancy values provided. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employment or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
-    "\n",
-    "For the purpose of this exercise, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. This transition can be gradual or sudden. Therefore there is no need to enter a retirement age for the sole purpose of quantifying your financial future.\n",
-    "\n",
-    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. As this file is in Excel, one can use the native calculator to enter a percentage of the anticipated income for contributions as this can sometimes be easier.\n",
-    "\n",
-    "Roth conversion are specified in the column marked *Roth X*. Roth conversion are typically performed in the years when the income is lower (and therefore lower tax rates), typically in the bridge years between having a full-time regular salary and collecting social security.\n",
-    "\n",
-    "Finally, *big ticket items* are used for accounting for the sale or purchase of a house, or any other major expense or money that you would give or receive (e.g., inheritance, or large gifts to or from you). Therefore, the sign (+/-) of entries in this column is important. All other column entries should be positive.\n",
-    "\n",
-    "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting the plan. In fact, ARP Lab extracts the names of these tabs to determine the individuals' names. Therefore, you need to rename these tabs to reflect your personal names if you want to accurately represent your case.\n",
-    "\n",
-    "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "029acbc5-419a-41b1-89d9-e91e46f04b75",
-   "metadata": {},
-   "source": [
-    "Sam has no additional income and does not make any additional contributions. We will use the template file which is empty but has the first tab named *Sam*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7748bcf1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plan.readContributions('template.xlsx')"
    ]
   },
   {
