Removed reference to Jack and Jill in notebook.

--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -479,7 +479,7 @@
    "id": "ae05b3e9-3d36-4254-bd70-6d3db25f5a54",
    "metadata": {},
    "source": [
-    "Recall that we set the rates above to mimic those from and after 1966. For this purpose, we only need to run a single realization looking at what would happen if Sam had retired in 1966. So let's run this plan: The following call runs all the required calculations for the time horizon over Jack and Jill's life expectancies. `run()` returns many variables that we assign to the `_` variable, used to store the answer to the last command in Python. Just a trick to avoid printing all these numbers on screen. Having set the variable to verbose, `run()` will report what happens during each year modeled."
+    "Recall that we set the rates above to mimic those from and after 1966. For this purpose, we only need to run a single realization looking at what would happen if Sam had retired in 1966. So let's run this plan: The following call runs all the required calculations for the time horizon over Sam's life expectancies. `run()` returns many variables that we assign to the `_` variable, used to store the answer to the last command in Python. Just a trick to avoid printing all these numbers on screen. Having set the variable to verbose, `run()` will report what happens during each year modeled."
    ]
   },
   {
@@ -525,7 +525,7 @@
    "metadata": {},
    "source": [
     "### Show sources of income over the years\n",
-    "Income will typically come from multiple sources, and it can be quite complex. This graphs shows the breakdown of Jack and Jill's sources of income by spouse and by origin. Note that distributions from tax-deferred accounts (*dist*) are distinguished from required minimum distributions (*rmd*) as they serve different purposes. Other labels should be self-explanatory. An extra title label *Sam* is passed to the function."
+    "Income will typically come from multiple sources, and it can be quite complex. This graphs shows the breakdown of Sam's sources of income by origin. Note that distributions from tax-deferred accounts (*dist*) are distinguished from required minimum distributions (*rmd*) as they serve different purposes. Other labels should be self-explanatory. An extra title label *Sam* is passed to the function."
    ]
   },
   {
@@ -590,6 +590,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1df58c6-1445-4f6e-b6a5-ec1bf404d1e3",
+   "metadata": {},
+   "source": [
+    "Asset distribution should be 50/50 stocks/bonds for the duration of the scenario."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8afa2e05-50b1-485f-ba6b-a330bf2dac10",
@@ -605,7 +613,15 @@
    "metadata": {},
    "source": [
     "### Show annual taxes paid over the years of the realization\n",
-    "This graph shows how much Jack and Jill paid in federal taxes and IRMAA income-related Medicare insurance monthly adjustments over the years of this realization."
+    "This graph shows how much Sam paid in federal taxes and IRMAA income-related Medicare insurance monthly adjustments over the years of this realization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b055672-06d4-409e-b65d-ea040e02d5be",
+   "metadata": {},
+   "source": [
+    " These amounts should be zero for Sam."
    ]
   },
   {
@@ -624,7 +640,7 @@
    "metadata": {},
    "source": [
     "### Show taxable annual income and anticipated tax brackets\n",
-    "Gross income also includes Roth conversions and big-ticket items, both of which are not contributing to your net income. This graph shows Jack and Jill's gross taxable income and how it compare with some anticipated Federal tax marginal brackets. This visualization is very convenient when one wants to perform Roth conversions and remain below a certain tax bracket.\n",
+    "Gross income also includes Roth conversions and big-ticket items, both of which are not contributing to your net income. This graph shows that Sam's gross income is not taxable and how it compare with some anticipated Federal tax marginal brackets. This visualization is very convenient when one wants to perform Roth conversions and remain below a certain tax bracket.\n",
     "\n",
     "Note the shift in tax brackets taking place as the Tax Cut and Job Act expires after 2025."
    ]
@@ -676,7 +692,7 @@
    "id": "9231c810-31db-45aa-98f1-6632f717d375",
    "metadata": {},
    "source": [
-    "Here, this call will create an excel workbook with one spreadsheet (tab) for Jack and one for Jill. \n",
+    "Here, this call will create an excel workbook with one spreadsheet (tab) named Sam. \n",
     "\n",
     "Open the file in Excel to see what it looks like. "
    ]
