Reset notebooks to non-executed.

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -434,7 +434,7 @@
     "These are important components for  future assumptions.\n",
     "Setting future rates is done with the `setRates()` method from which one can select different\n",
     "sources for determining the rates.\n",
-    "Valid choices are *historical*, *stochastic*, *average*, 'fixed', or 'default'.\n",
+    "Valid choices are *historical*, *stochastic*, *average*, *fixed*, or *default*.\n",
     "\n",
     "For the *historical*, *stochastic*, and *average* options, data from 1928 to the last year are available for experimenting.\n",
     "Ranges chosen smaller than the life horizon of the longest-lived individual will have rate values repeated in cycle. For example,\n",
@@ -470,7 +470,7 @@
     "\n",
     "    plan.setRates('average', 1990, 2020)\n",
     "\n",
-    "would set the rates to fixed values being the average observed from 1990 to 2020 inclusively.\n",
+    "would set the rates to constant values being the average observed from 1990 to 2020 inclusively.\n",
     "    \n",
     "Finally one can also use fixed annual rates by providing a list of 4 entries in percent as follows:\n",
     "\n",
