--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -269,7 +269,9 @@
   {
    "cell_type": "markdown",
    "id": "04d8f918-6f14-48a5-bdbc-13a969b3850b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## What about anticipated fixed income?\n",
     "Pension and social security are fixed income. Model here assumes that pension income is not inflation adjusted while social security benefits are (but ARP Lab can easily be modified to account for inflation-adjusted pensions). Numbers to be provided are the predicted amount for each spouse and the age of the commencement of benefits.\n",
@@ -377,7 +379,7 @@
     "These are important components for  future assumptions.\n",
     "Setting future rates is done with the `setRates()` method from which one can select different\n",
     "sources for determining the rates.\n",
-    "Valid choices are *historical*, *stochastic*, *average*, 'fixed', or 'default'.\n",
+    "Valid choices are *historical*, *stochastic*, *average*, *fixed*, or *default*.\n",
     "\n",
     "For the *historical*, *stochastic*, and *average* options, data from 1928 to the last year are available for experimenting.\n",
     "Ranges chosen smaller than the life horizon of the longest-lived individual will have rate values repeated in cycle. For example,\n",
@@ -413,14 +415,14 @@
     "\n",
     "    plan.setRates('average', 1990, 2020)\n",
     "\n",
-    "would set the rates to fixed values being the average observed from 1990 to 2020 inclusively.\n",
+    "would set the rates to constant values being the average observed from 1990 to 2020 inclusively.\n",
     "    \n",
     "Finally one can also use fixed annual rates by providing a list of 4 entries in percent as follows:\n",
     "\n",
     "    myrates = [9.6, 4.0, 3.0, 3.8]\n",
     "    plan.setRates('fixed', values=myrates)\n",
     "    \n",
-    "This example would use fixed rates of 9.6%, 4.0%, 3.0%, and 3.8% as average annual returns on S&P 500, corporate bonds, Treasury notes, and common assets, respectively, with an average annual inflation rate of 3.8% for the full duration of the time simulation. Recall that the common assets class consists of investments tracking inflation only. Therefore the last index serves both to track the common asset class and to adjust values for inflation.\n",
+    "This example would use *fixed* rates of 9.6%, 4.0%, 3.0%, and 3.8% as average annual returns on S&P 500, corporate bonds, Treasury notes, and common assets, respectively, with an average annual inflation rate of 3.8% for the full duration of the time simulation. Recall that the common assets class consists of investments tracking inflation only. Therefore the last index serves both to track the common asset class and to adjust values for inflation.\n",
     "\n",
     "Also note that the S&P 500 rates provided always include dividends, which are assumed to be reinvested.\n"
    ]
